--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,5 @@ export(plot_strip_connections)
 export(theme_clean)
 import(dplyr)
 import(ggplot2)
-import(magrittr)
 import(purrr)
+importFrom(magrittr,"%<>%")
