at least it doesn't error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,7 @@ export(theme_clean)
 import(dplyr)
 import(ggplot2)
 import(purrr)
+import(tibble)
 importFrom(magrittr,"%<>%")
+importFrom(magrittr,set_colnames)
+importFrom(magrittr,set_rownames)
