--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: dynplot
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Plotting of trajectories
 Version: 0.1.0
-Author: Who wrote it
+Author: Wouter Saelens
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports:
+  dplyr,
+  tibble,
+  purrr,
+  ggplot2,
+  magrittr
