Many fixes for dynplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,19 @@ export(plot_strip_connections)
 export(theme_clean)
 import(dplyr)
 import(ggplot2)
-import(purrr)
+import(methods)
+import(tibble)
+import(tidyr)
+importFrom(GA,ga)
+importFrom(cowplot,plot_grid)
+importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
+importFrom(purrr,"%>%")
+importFrom(purrr,keep)
+importFrom(purrr,map)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
+importFrom(purrr,map_df)
+importFrom(purrr,map_int)
+importFrom(purrr,map_lgl)
+importFrom(purrr,set_names)
