--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,22 @@
 Package: dynplot
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Plotting functions for the dynverse
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(
+  person("Robrecht", "Cannoodt", email = "robrecht.cannoodt@gmail.com", role = c("aut")),
+  person("Wouter", "Saelens", email = "wouter.saelens@ugent.be", role = c("aut", "cre")))
+Description: Plot ALL the trajectories!
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports:
+  cowplot,
+  dplyr,
+  GA,
+  ggplot2,
+  magrittr,
+  methods,
+  purrr,
+  tibble,
+  tidyr
