--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
+importFrom(dynutils,extract_row_to_list)
+importFrom(dynutils,is_ti_data_wrapper)
+importFrom(dynutils,scale_minmax)
+importFrom(dynutils,scale_uniform)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
@@ -39,3 +43,4 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
 importFrom(reshape2,melt)
+importFrom(stats,setNames)
