add apt packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,12 @@ sudo: required
 dist: trusty
 bioc_required: true
 cache: packages
+addons:
+  apt:
+    packages:
+      - libgsl-dev
+      - libsdl1.2-dev
+      - libreadline-dev
+      - imagemagick
+      - libfftw3-dev
+      - libudunits2-dev
