also install suggested packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ addons:
       - imagemagick
       - libfftw3-dev
       - libudunits2-dev
+install:
+ - R -e 'install.packages("devtools")'
+ - R -e 'devtools::install(dependencies = TRUE, upgrade_dependencies = TRUE)'
