--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ addons:
       - libudunits2-dev
 install:
  - R -e 'install.packages("devtools")'
+ - R -e 'devtools::install_github("dynverse/devtools")'
  - R -e 'devtools::install(dependencies = TRUE, upgrade_dependencies = TRUE)'
