--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ addons:
       - libfftw3-dev
       - libudunits2-dev
 install:
- - R -e 'install.packages("devtools")'
- - R -e 'devtools::install_github("dynverse/devtools", ref = "1.13.0")'
- - R -e 'devtools::install(dependencies = TRUE, upgrade_dependencies = TRUE)'
+ - R -e 'install.packages("remotes")'
+ - R -e 'remotes::install_deps(dependencies = T, upgrade = T)'
+ - R -e 'remotes::install_local(".")'
