again use devtools instead of remotes

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ addons:
       - libfftw3-dev
       - libudunits2-dev
 install:
- - R -e 'install.packages("remotes")'
- - R -e 'remotes::install_deps(dependencies = T, upgrade = T)'
- - R -e 'remotes::install_local(".")'
+ - R -e 'install.packages("devtools")'
+ - R -e 'setRepositories(ind = 1:2)'
+ - R -e 'devtools::install(dependencies = T, upgrade = T)'
