I hope this fixes it, but I can't test it locally

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
   tidyr
 Suggests:
   dyntoy,
-  dynmethods
+  dynmethods,
+  ggrepel
 Remotes:
   rcannood/dynmethods,
   rcannood/dynutils,
