update to new dynutils wrappers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
 importFrom(dynutils,extract_row_to_list)
-importFrom(dynutils,is_ti_data_wrapper)
+importFrom(dynutils,is_data_wrapper)
 importFrom(dynutils,scale_minmax)
 importFrom(dynutils,scale_uniform)
 importFrom(grDevices,col2rgb)
@@ -44,3 +44,4 @@ importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
 importFrom(reshape2,melt)
 importFrom(stats,setNames)
+importFrom(testthat,expect_true)
