--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(plot_strip_connections)
 export(process_dynplot)
 export(theme_clean)
 import(dplyr)
+import(dynutils)
+import(dynwrap)
 import(ggplot2)
 import(methods)
 import(tibble)
@@ -21,9 +23,6 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
 importFrom(dynutils,extract_row_to_list)
-importFrom(dynutils,is_data_wrapper)
-importFrom(dynutils,scale_minmax)
-importFrom(dynutils,scale_uniform)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
