--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
 importFrom(dynutils,extract_row_to_list)
+importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
