--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(grDevices,rgb)
 importFrom(grid,arrow)
 importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,layout_with_kk)
+importFrom(igraph,neighbors)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(pheatmap,pheatmap)
