--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,5 +44,6 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
 importFrom(reshape2,melt)
+importFrom(shades,hue)
 importFrom(stats,setNames)
 importFrom(testthat,expect_true)
