--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,13 +21,15 @@ import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
-importFrom(cowplot,theme_cowplot)
 importFrom(dynutils,extract_row_to_list)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,colours)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
 importFrom(grid,arrow)
+importFrom(grid,unit)
 importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,layout_with_kk)
 importFrom(igraph,neighbors)
@@ -44,6 +46,6 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,set_names)
 importFrom(reshape2,melt)
+importFrom(rje,cubeHelix)
 importFrom(shades,hue)
-importFrom(stats,setNames)
 importFrom(testthat,expect_true)
