--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ importFrom(igraph,layout_with_kk)
 importFrom(igraph,neighbors)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
+importFrom(magrittr,set_colnames)
+importFrom(magrittr,set_rownames)
 importFrom(pheatmap,pheatmap)
 importFrom(purrr,"%>%")
 importFrom(purrr,keep)
