--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ addons:
       - libfftw3-dev
       - libudunits2-dev
 install:
- - R -e 'install.packages("devtools")'
+ - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
+ - R -e 'devtools::install_cran("covr")'
  - R -e 'setRepositories(ind = 1:2)'
  - R -e 'devtools::install(dependencies = T, upgrade = T)'
+after_success:
+ - R -e 'covr::codecov()'
