--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,4 +50,6 @@ importFrom(purrr,set_names)
 importFrom(reshape2,melt)
 importFrom(rje,cubeHelix)
 importFrom(shades,hue)
+importFrom(stats,as.dist)
+importFrom(stats,hclust)
 importFrom(testthat,expect_true)
