add ggraph to dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,13 @@ Imports:
   dynutils,
   dynwrap,
   GA,
+  ggraph,
   ggplot2,
   ggrepel,
+  ggraph,
   igraph,
   magrittr,
   methods,
-  pheatmap,
   purrr,
   rje,
   shades,
@@ -29,7 +30,8 @@ Imports:
   reshape2,
   testthat,
   tibble,
-  tidyr
+  tidyr,
+  tidygraph
 Suggests:
   dyntoy,
   knitr,
