--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,10 @@ import(dplyr)
 import(dynutils)
 import(dynwrap)
 import(ggplot2)
+import(ggraph)
 import(methods)
 import(tibble)
+import(tidygraph)
 import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
@@ -37,7 +39,6 @@ importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
-importFrom(pheatmap,pheatmap)
 importFrom(purrr,"%>%")
 importFrom(purrr,keep)
 importFrom(purrr,map)
