--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,10 @@ importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
 importFrom(dynutils,extract_row_to_list)
+importFrom(ggraph,geom_edge_elbow)
+importFrom(ggraph,geom_node_point)
+importFrom(ggraph,ggraph)
+importFrom(ggraph,theme_graph)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
@@ -50,6 +54,9 @@ importFrom(purrr,set_names)
 importFrom(reshape2,melt)
 importFrom(rje,cubeHelix)
 importFrom(shades,hue)
+importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
+importFrom(stats,dist)
 importFrom(stats,hclust)
+importFrom(stats,runif)
 importFrom(testthat,expect_true)
