--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(make_connection_plotdata)
 export(plot_combined)
 export(plot_connections)
 export(plot_default)
+export(plot_dendro)
 export(plot_genes)
 export(plot_heatmap)
 export(plot_strip)
@@ -21,6 +22,7 @@ import(dynutils)
 import(dynwrap)
 import(ggplot2)
 import(ggraph)
+import(igraph)
 import(methods)
 import(tibble)
 import(tidygraph)
