--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,13 @@ export(dimred_trajectory)
 export(dimred_tsne)
 export(make_connection_plotdata)
 export(plot_combined)
-export(plot_connections)
 export(plot_default)
 export(plot_dendro)
 export(plot_genes)
 export(plot_heatmap)
+export(plot_onedim)
 export(plot_strip)
-export(plot_strip_connections)
+export(plot_strip_onedim)
 export(process_dynplot)
 export(theme_clean)
 import(dplyr)
