update doc & namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(dimred_trajectory)
 export(dimred_tsne)
 export(make_connection_plotdata)
 export(plot_combined)
-export(plot_default)
 export(plot_dendro)
 export(plot_genes)
+export(plot_graph)
 export(plot_heatmap)
 export(plot_onedim)
 export(plot_strip)
