--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,10 +57,10 @@ Collate:
     'dimensionality_reduction.R'
     'is_colour_vector.R'
     'linearise_cells.R'
+    'plot_graph.R'
     'milestone_palette.R'
     'optimize_order.R'
     'package.R'
-    'plot_default.R'
     'plot_combined.R'
     'plot_connections.R'
     'plot_dendro.R'
