--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(dimred_trajectory)
 export(dimred_tsne)
 export(make_connection_plotdata)
 export(plot_dendro)
+export(plot_dimred)
 export(plot_genes)
 export(plot_graph)
 export(plot_heatmap)
