--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,5 +71,6 @@ Collate:
     'plot_trajectory_dimred.R'
     'process_dynplot.R'
     'theme_clean.R'
+    'plot_dimred.R'
     'zzz.R'
 VignetteBuilder: knitr
