update plot grouped

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(plot_strip)
 export(plot_strip_onedim)
 export(process_dynplot)
 export(theme_clean)
+export(theme_graph)
 import(dplyr)
 import(dynutils)
 import(dynwrap)
