make parameter inhertance explicit

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,26 +55,25 @@ Remotes:
   dynverse/dyntoy,
   thomasp85/patchwork
 Collate: 
-    'add_cell_coloring.R'
+    'add_coloring.R'
     'dimensionality_reduction.R'
+    'dummy_proofing.R'
     'is_colour_vector.R'
     'linearise_cells.R'
-    'plot_graph.R'
     'milestone_palette.R'
     'optimize_order.R'
     'package.R'
     'plot_combined.R'
-    'plot_connections.R'
     'plot_dendro.R'
+    'plot_dimred.R'
     'plot_genes.R'
+    'plot_graph.R'
+    'plot_grouped.R'
     'plot_heatmap.R'
+    'plot_onedim.R'
     'plot_strip.R'
     'plot_strip_connections.R'
     'plot_trajectory_dimred.R'
-    'plot_dimred.R'
-    'plot_grouped.R'
-    'dummy_proofing.R'
     'process_dynplot.R'
     'theme_clean.R'
-    'zzz.R'
 VignetteBuilder: knitr
