add "auto" to milestone coloring, add plot topology

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(plot_heatmap)
 export(plot_onedim)
 export(plot_strip)
 export(plot_strip_onedim)
+export(plot_topology)
 export(process_dynplot)
 export(theme_clean)
 export(theme_graph)
