--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -72,6 +72,7 @@ Collate:
     'plot_onedim.R'
     'plot_strip.R'
     'plot_strip_connections.R'
+    'plot_topology.R'
     'plot_trajectory_dimred.R'
     'process_dynplot.R'
     'theme_clean.R'
