export milestone palettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(dimred_pca)
 export(dimred_trajectory)
 export(dimred_tsne)
 export(make_connection_plotdata)
+export(milestone_palette_list)
 export(plot_default)
 export(plot_dendro)
 export(plot_dimred)
