--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
-  ggplot2,
   cowplot,
   dplyr,
   dynutils,
   dynwrap,
   GA,
   ggbeeswarm,
+  ggplot2,
   ggraph,
   ggrepel,
   igraph,
@@ -52,7 +52,7 @@ Remotes:
   dynverse/dynutils,
   dynverse/dynwrap,
   dynverse/dyntoy,
-  thomasp85/patchwork
+  dynverse/patchwork
 Collate: 
     'add_coloring.R'
     'dimensionality_reduction.R'
