--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Remotes:
   dynverse/dynutils,
   dynverse/dynwrap,
   dynverse/dyntoy,
-  dynverse/patchwork
+  tidyverse/ggplot2,
+  thomasp85/patchwork
 Collate: 
     'add_coloring.R'
     'dimensionality_reduction.R'
