remove dependency on cowplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ import(tidygraph)
 import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
-importFrom(cowplot,plot_grid)
 importFrom(dynutils,extract_row_to_list)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
@@ -49,6 +48,8 @@ importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
+importFrom(patchwork,plot_spacer)
+importFrom(patchwork,wrap_plots)
 importFrom(purrr,"%>%")
 importFrom(purrr,keep)
 importFrom(purrr,map)
