--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
-  ggplot2,
+  ggplot2 (>= 2.2.1.9000),
   dplyr,
   dynutils,
   dynwrap,
