add import for ggbeeswarm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(dynutils,extract_row_to_list)
+importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
