--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
-  ggplot2 (>= 2.2.1.9000),
+  aaaimportthisfirst,
   dplyr,
   dynutils,
   dynwrap,
   GA,
   ggbeeswarm,
+  ggplot2,
   ggraph,
   ggrepel,
   igraph,
@@ -48,6 +49,7 @@ Suggests:
   smacof,
   tsne
 Remotes:
+  dynverse/aaaimportthisfirst,
   dynverse/dynutils,
   dynverse/dynwrap,
   dynverse/dyntoy,
