--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ dist: trusty
 bioc_required: true
 cache: packages
 env:
-  - R_MAX_NUM_DLLS=250
+  global:
+    - R_MAX_NUM_DLLS=250
 addons:
   apt:
     packages:
