--- a/.travis_init2.yml
+++ b/.travis_init2.yml
@@ -25,3 +25,5 @@ install:
  - R -e 'setRepositories(ind = 1:2); devtools::install(dep = T, upgr = T)'
 r_check_args: "--no-tests --no-manual --no-vignettes --no-build-vignettes"
 r_build_args: "--no-build-vignettes"
+after_success:
+ - R -e 'cat("covr")'
