grouping_assignment now plotted on heatmap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(dimred_mds)
 export(dimred_pca)
 export(dimred_trajectory)
 export(dimred_tsne)
+export(get_milestone_palette_names)
 export(make_connection_plotdata)
-export(milestone_palette_list)
 export(plot_default)
 export(plot_dendro)
 export(plot_dimred)
