update docs and expand testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,16 @@
 
 export(dimred_dp)
 export(dimred_ica)
+export(dimred_lle)
 export(dimred_mds)
+export(dimred_mds_isomds)
+export(dimred_mds_sammon)
+export(dimred_mds_smacof)
 export(dimred_pca)
+export(dimred_simlr)
 export(dimred_trajectory)
 export(dimred_tsne)
+export(get_dimreds)
 export(get_milestone_palette_names)
 export(make_connection_plotdata)
 export(plot_default)
@@ -32,7 +38,6 @@ import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(dynutils,extract_row_to_list)
-importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,.data)
