--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(make_connection_plotdata)
 export(plot_default)
 export(plot_dendro)
 export(plot_dimred)
-export(plot_genes)
+export(plot_features)
 export(plot_graph)
 export(plot_heatmap)
 export(plot_onedim)
