several fixes, remove SCORPIUS dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(dimred_trajectory)
 export(dimred_tsne)
 export(get_dimreds)
 export(get_milestone_palette_names)
-export(make_connection_plotdata)
 export(plot_default)
 export(plot_dendro)
 export(plot_dimred)
@@ -39,7 +38,6 @@ import(tidygraph)
 import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
-importFrom(dynutils,extract_row_to_list)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,.data)
@@ -501,6 +499,7 @@ importFrom(magrittr,set_rownames)
 importFrom(patchwork,wrap_plots)
 importFrom(purrr,"%>%")
 importFrom(purrr,keep)
+importFrom(purrr,list_modify)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
