fix plot_connections, rename task -> traj

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -72,9 +72,9 @@ Collate:
     'plot_graph.R'
     'plot_grouped.R'
     'plot_heatmap.R'
+    'plot_linearised_comparison.R'
     'plot_onedim.R'
     'plot_strip.R'
-    'plot_strip_connections.R'
     'plot_topology.R'
     'plot_trajectory_dimred.R'
     'process_dynplot.R'
