--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,9 @@ export(plot_dimred)
 export(plot_features)
 export(plot_graph)
 export(plot_heatmap)
+export(plot_linearised_comparison)
 export(plot_onedim)
 export(plot_strip)
-export(plot_strip_onedim)
 export(plot_topology)
 export(process_dynplot)
 export(theme_clean)
