--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ importFrom(ggplot2,GeomText)
 importFrom(ggplot2,GeomTile)
 importFrom(ggplot2,GeomViolin)
 importFrom(ggplot2,GeomVline)
+importFrom(ggplot2,Layout)
 importFrom(ggplot2,Position)
 importFrom(ggplot2,PositionDodge)
 importFrom(ggplot2,PositionDodge2)
@@ -275,7 +276,11 @@ importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,guide_colorbar)
 importFrom(ggplot2,guide_colourbar)
+importFrom(ggplot2,guide_gengrob)
+importFrom(ggplot2,guide_geom)
 importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guide_merge)
+importFrom(ggplot2,guide_train)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,is.Coord)
 importFrom(ggplot2,is.facet)
