--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,8 +67,8 @@ Collate:
     'plot_combined.R'
     'plot_dendro.R'
     'plot_dimred.R'
+    'plot_features.R'
     'plot_generic.R'
-    'plot_genes.R'
     'plot_graph.R'
     'plot_grouped.R'
     'plot_heatmap.R'
