fix plot_dendro without root

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -212,7 +212,6 @@ importFrom(ggplot2,ensyms)
 importFrom(ggplot2,expand_limits)
 importFrom(ggplot2,expand_scale)
 importFrom(ggplot2,expr)
-importFrom(ggplot2,exprs)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_null)
 importFrom(ggplot2,facet_wrap)
@@ -368,6 +367,9 @@ importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,scale_colour_ordinal)
 importFrom(ggplot2,scale_colour_viridis_c)
 importFrom(ggplot2,scale_colour_viridis_d)
+importFrom(ggplot2,scale_continuous_identity)
+importFrom(ggplot2,scale_discrete_identity)
+importFrom(ggplot2,scale_discrete_manual)
 importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,scale_fill_continuous)
 importFrom(ggplot2,scale_fill_date)
