--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ env:
   global:
     - R_MAX_NUM_DLLS=250
 before_install:
- - sudo apt-get --allow-unauthenticated update
- - sudo apt-get upgrade
- - wget -q -O - https://www.mongodb.org/static/pgp/server-3.2.pub | sudo apt-key add -
- - sudo apt-get --allow-unauthenticated install libgsl-dev libsdl1.2-dev libreadline-dev imagemagick libfftw3-dev libudunits2-dev -y
+ - sudo apt-get update
+ - sudo apt-get --allow-unauthenticated upgrade
+ - sudo apt-get --allow-unauthenticated -y install libgsl-dev libsdl1.2-dev libreadline-dev imagemagick libfftw3-dev libudunits2-dev -y
 install:
  - if [ `git branch | grep '* master' | wc -l` == 0 ]; then sed -i 's#\(dynverse/[^, ]*\)#\1@devel#' DESCRIPTION; fi
  - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
