fix ggplot2 imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,7 +163,6 @@ importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,benchplot)
 importFrom(ggplot2,borders)
-importFrom(ggplot2,calc)
 importFrom(ggplot2,calc_element)
 importFrom(ggplot2,combine_vars)
 importFrom(ggplot2,continuous_scale)
@@ -427,6 +426,7 @@ importFrom(ggplot2,scale_y_time)
 importFrom(ggplot2,sec_axis)
 importFrom(ggplot2,set_last_plot)
 importFrom(ggplot2,should_stop)
+importFrom(ggplot2,stat)
 importFrom(ggplot2,stat_bin)
 importFrom(ggplot2,stat_bin2d)
 importFrom(ggplot2,stat_bin_2d)
