--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dimred_pca)
 export(dimred_simlr)
 export(dimred_trajectory)
 export(dimred_tsne)
+export(dimred_umap)
 export(get_dimreds)
 export(get_milestone_palette_names)
 export(plot_default)
