--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,7 @@
 
 S3method(plot,"dynwrap::with_expression")
 S3method(plot,"dynwrap::with_trajectory")
-export(dimred_dp)
-export(dimred_ica)
-export(dimred_lle)
-export(dimred_mds)
-export(dimred_mds_isomds)
-export(dimred_mds_sammon)
-export(dimred_mds_smacof)
-export(dimred_pca)
 export(dimred_trajectory)
-export(dimred_tsne)
-export(dimred_umap)
-export(get_dimreds)
 export(get_milestone_palette_names)
 export(plot_default)
 export(plot_dendro)
@@ -29,6 +18,7 @@ export(process_dynplot)
 export(theme_clean)
 export(theme_graph)
 import(dplyr)
+import(dyndimred)
 import(dynutils)
 import(dynwrap)
 import(ggplot2)
