--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(shades,hue)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
 importFrom(stats,dist)
+importFrom(stats,dnorm)
 importFrom(stats,hclust)
 importFrom(stats,runif)
 importFrom(testthat,expect_true)
