--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
 importFrom(patchwork,wrap_plots)
 importFrom(purrr,"%>%")
+importFrom(purrr,discard)
 importFrom(purrr,keep)
 importFrom(purrr,list_modify)
 importFrom(purrr,map)
