--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,10 @@ language: r
 sudo: required
 dist: trusty
 bioc_required: true
-cache:
-  timeout: 2000
-  apt: true
-  directories:
-    - $HOME/R/Library
-addons:
-  apt:
-    packages:
-      - libgsl0-dev
-      - libsdl1.2-dev
-      - libreadline-dev
-      - imagemagick
-      - libfftw3-dev
-      - libudunits2-dev
-      - libssh-dev  # PRISM > ssh > libssh-dev
-install:
- - if [ `git branch | grep '* master' | wc -l` == 0 ]; then sed -i 's#\(dynverse/[^, ]*\)#\1@devel#' DESCRIPTION; fi
- - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
- - R -e 'devtools::install_cran("covr")'
- - R -e 'setRepositories(ind = 1:2); devtools::install(dependencies = T, upgrade = T)'
+cache: packages
+r_packages:
+ - devtools
+ - covr
+ - knitr
 after_success:
  - R -e 'covr::codecov()'
