nice try but no cigar

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ sudo: required
 dist: trusty
 bioc_required: true
 cache: packages
-r_packages:
- - devtools
- - covr
- - knitr
+addons:
+  apt:
+    packages:
+    - libudunits2-dev                     # units > ggforce > ggraph > patchwork > dynplot
+install:
+ - if [ `git branch | grep '* master' | wc -l` == 0 ]; then sed -i 's#\(dynverse/[^, ]*\)#\1@devel#' DESCRIPTION; fi
+ - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
+ - R -e 'devtools::install_cran("covr")'
+ - R -e 'setRepositories(ind = 1:2); devtools::install(dependencies = T, upgrade = T)'
 after_success:
  - R -e 'covr::codecov()'
