--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ import(tidygraph)
 import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(cowplot,theme_nothing)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
