--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+SystemRequirements: libudunits2-dev (deb) or udunits2-devel (rpm)
 Imports:
   cowplot,
   dplyr,
