--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pmap)
 importFrom(purrr,set_names)
 importFrom(rje,cubeHelix)
 importFrom(shades,hue)
