--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(dynwrap)
 import(ggplot2)
 import(ggraph)
 import(methods)
+import(purrr)
 import(tibble)
 import(tidygraph)
 import(tidyr)
@@ -39,18 +40,6 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
 importFrom(patchwork,wrap_plots)
-importFrom(purrr,"%>%")
-importFrom(purrr,discard)
-importFrom(purrr,keep)
-importFrom(purrr,list_modify)
-importFrom(purrr,map)
-importFrom(purrr,map_chr)
-importFrom(purrr,map_dbl)
-importFrom(purrr,map_df)
-importFrom(purrr,map_int)
-importFrom(purrr,map_lgl)
-importFrom(purrr,pmap)
-importFrom(purrr,set_names)
 importFrom(rje,cubeHelix)
 importFrom(shades,hue)
 importFrom(stats,as.dendrogram)
