add assertthat check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(plot_topology)
 export(process_dynplot)
 export(theme_clean)
 export(theme_graph)
+import(assertthat)
 import(dplyr)
 import(dyndimred)
 import(dynutils)
