--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(plot_topology)
 export(process_dynplot)
 export(theme_clean)
 export(theme_graph)
-import(assertthat)
 import(dplyr)
 import(dyndimred)
 import(dynutils)
@@ -30,6 +29,7 @@ import(tidygraph)
 import(tidyr)
 importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(assertthat,assert_that)
 importFrom(cowplot,theme_nothing)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,colours)
