--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
  - install_cran devtools covr
  - install_withdeps
 after_success:
- - R -e 'covr::codecov()'
+ - - echo codecov is failing? # R -e 'covr::codecov()'
 
 jobs:
   include:
