I guess I'll install hdf5 -_-

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     - libudunits2-dev                     # units > ggforce > ggraph > patchwork > dynplot
 before_install:
   - source <(curl -sSL https://raw.githubusercontent.com/dynverse/travis_scripts/master/helper.sh)
+  - install_hdf5
 cache:
   directories:
     - $HOME/R/Library
