--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
 before_install:
   - source <(curl -sSL https://raw.githubusercontent.com/dynverse/travis_scripts/master/helper.sh)
   - install_hdf5
+  - install_dynverse
 cache:
   directories:
     - $HOME/R/Library
