--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dynplot
 Type: Package
 Title: Plotting functions for the dynverse
-Version: 1.0.0
+Version: 1.0.0.9000
 Authors@R: c(
   person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
   person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
@@ -50,12 +50,12 @@ Suggests:
   destiny,
   knitr,
   rmarkdown
-Remotes:
-  dynverse/dynutils,
-  dynverse/dyndimred,
-  dynverse/dynwrap,
-  dynverse/dynfeature,
-  thomasp85/patchwork
+Remotes: 
+    thomasp85/patchwork,
+    dynverse/dynutils@devel,
+    dynverse/dyndimred@devel,
+    dynverse/dynwrap@devel,
+    dynverse/dynfeature@devel
 VignetteBuilder: knitr
 Collate: 
     'milestone_palette.R'
