--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,15 @@
 S3method(ggplot_build,dynplot)
 export(dynplot)
 export(empty_plot)
+export(geom_cell_hex)
+export(geom_cell_point)
 export(geom_milestone_label)
 export(geom_milestone_point)
+export(geom_trajectory_connection)
+export(geom_trajectory_divergence)
+export(geom_trajectory_segments)
 export(get_milestone_palette_names)
+export(layout_dendro)
 export(new_scale)
 export(new_scale_fillcolour)
 export(scale_milestones_fillcolour)
