hotfix shades hue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,10 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(assertthat,assert_that)
 importFrom(cowplot,theme_nothing)
 importFrom(ggrepel,geom_label_repel)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,colours)
 importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb2hsv)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(magrittr,"%$%")
@@ -43,7 +45,6 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
 importFrom(patchwork,wrap_plots)
 importFrom(rje,cubeHelix)
-importFrom(shades,hue)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
 importFrom(stats,dist)
