--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dynplot
 Type: Package
 Title: Plotting functions for the dynverse
-Version: 1.0.0.9000
+Version: 1.0.1
 Authors@R: c(
   person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
   person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
@@ -49,12 +49,12 @@ Suggests:
   destiny,
   knitr,
   rmarkdown
-Remotes: 
+Remotes:  
     thomasp85/patchwork,
-    dynverse/dynutils@devel,
-    dynverse/dyndimred@devel,
-    dynverse/dynwrap@devel,
-    dynverse/dynfeature@devel
+    dynverse/dynutils@master,
+    dynverse/dyndimred@master,
+    dynverse/dynwrap@master,
+    dynverse/dynfeature@master
 VignetteBuilder: knitr
 Collate: 
     'milestone_palette.R'
