--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dynplot
 Type: Package
 Title: Plotting functions for the dynverse
-Version: 1.0.1
+Version: 1.0.1.9000
 Authors@R: c(
   person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
   person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
@@ -51,10 +51,10 @@ Suggests:
   rmarkdown
 Remotes:  
     thomasp85/patchwork,
-    dynverse/dynutils@master,
-    dynverse/dyndimred@master,
-    dynverse/dynwrap@master,
-    dynverse/dynfeature@master
+    dynverse/dynutils@devel,
+    dynverse/dyndimred@devel,
+    dynverse/dynwrap@devel,
+    dynverse/dynfeature@devel
 VignetteBuilder: knitr
 Collate: 
     'milestone_palette.R'
