--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,30 @@ export(dynplot)
 export(empty_plot)
 export(geom_cell_hex)
 export(geom_cell_point)
+export(geom_expression_raster)
 export(geom_milestone_label)
 export(geom_milestone_point)
 export(geom_trajectory_connection)
 export(geom_trajectory_divergence)
 export(geom_trajectory_segments)
+export(geom_velocity_arrow)
+export(get_features)
 export(get_milestone_palette_names)
 export(layout_dendro)
+export(layout_dimred)
+export(layout_graph)
+export(layout_heatmap)
+export(layout_modules)
+export(layout_onedim)
 export(new_scale)
 export(new_scale_fillcolour)
+export(scale_expression_fillcolour)
 export(scale_milestones_fillcolour)
+export(select_expression)
+export(shadow)
+export(stat_velocity_cells)
+export(stat_velocity_grid)
+export(stat_velocity_random)
 export(theme_clean)
 export(theme_graph)
 import(dplyr)
