--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,3 +55,4 @@ importFrom(stats,as.dist)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,runif)
+importFrom(stringr,str_detect)
