--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,12 @@ S3method(plot,"dynwrap::with_trajectory")
 export(empty_plot)
 export(get_milestone_palette_names)
 export(plot_default)
-export(plot_dendro)
-export(plot_dimred)
+export(plot_dendro_old)
+export(plot_dimred_old)
 export(plot_edge_flips)
 export(plot_graph)
 export(plot_heatmap)
+export(plot_heatmap_old)
 export(plot_linearised_comparison)
 export(plot_onedim)
 export(plot_strip)
@@ -19,6 +20,7 @@ export(theme_clean)
 export(theme_graph)
 import(dplyr)
 import(dyndimred)
+import(dynplot2)
 import(dynutils)
 import(dynwrap)
 import(ggplot2)
@@ -51,3 +53,4 @@ importFrom(stats,dist)
 importFrom(stats,dnorm)
 importFrom(stats,hclust)
 importFrom(stats,runif)
+importFrom(zeallot,"%<-%")
