--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -82,6 +82,7 @@ Collate:
     'plot_heatmap_annotations_velocity.R'
     'plot_heatmap_annotations.R'
     'plot_heatmap.R'
+    'plot_heatmap_mappers.R'
     'plot_linearised_comparison.R'
     'plot_onedim.R'
     'plot_strip.R'
