--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,10 @@ Description: Package that create ggplot2 plots of single-cell trajectories. This
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 SystemRequirements: libudunits2-dev (deb) or udunits2-devel (rpm)
+URL: https://github.com/dynverse/dynplot
+BugReports: https://github.com/dynverse/dynplot/issues
 Depends:
   R (>= 3.0.0)
 Imports:
