--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
 Description: Package that create ggplot2 plots of single-cell trajectories. This can be
             the trajectory topology itself, projected onto a dimensionality reduction,
             using a heatmap, or a comparison between two trajectories.
-License: GPL-3
+License: MIT + LICENSE file
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
