fix plot heatmap with linear trajectory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,"dynwrap::with_trajectory")
 export(empty_plot)
 export(get_milestone_palette_names)
 export(plot_default)
+export(plot_dimred)
 export(plot_graph)
 export(plot_heatmap)
 export(plot_topology)
