--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Package that create ggplot2 plots of single-cell trajectories. This
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
 SystemRequirements: libudunits2-dev (deb) or udunits2-devel (rpm)
 URL: https://github.com/dynverse/dynplot
 BugReports: https://github.com/dynverse/dynplot/issues
@@ -69,6 +69,7 @@ Collate:
     'optimize_order.R'
     'package.R'
     'plot_dendro.R'
+    'project_waypoints.R'
     'plot_dimred.R'
     'plot_edge_flips.R'
     'plot_generic.R'
