--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0.2.9000
 Authors@R: c(
   person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
   person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
-Description: Package that create ggplot2 plots of single-cell trajectories. This can be
+Description: Create ggplot2 plots of single-cell trajectories. This can be
             the trajectory topology itself, projected onto a dimensionality reduction,
             using a heatmap, or a comparison between two trajectories.
 License: MIT + file LICENSE
