add arrow parameter to plot functions, fix imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,9 +45,11 @@ importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
 importFrom(patchwork,wrap_plots)
 importFrom(rje,cubeHelix)
+importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
 importFrom(stats,dist)
 importFrom(stats,dnorm)
 importFrom(stats,hclust)
 importFrom(stats,runif)
+importFrom(utils,tail)
