--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(GA,ga)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(assertthat,assert_that)
 importFrom(cowplot,theme_nothing)
+importFrom(ggforce,geom_link2)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colours)
